Always presenting selector, always dispatching notification unless suppressed by options

--- a/html/options.html
+++ b/html/options.html
@@ -26,8 +26,8 @@
           <h5>Options</h5>
           <ul>
             <li class="clearfix">
-              <label for="show-notifications">Show notifications upon beaming</label>
-              <em class="option"><input id="show-notifications" type="checkbox"/></em>
+              <label for="suppress-notifications">Suppress notifications upon beaming</label>
+              <em class="option"><input id="suppress-notifications" type="checkbox"/></em>
             </li>
             <li class="clearfix">
               <label for="show-badge">Show badge with total devices' number</label>
