New option added: ability to close the tab after beaming

--- a/html/options.html
+++ b/html/options.html
@@ -25,13 +25,17 @@
         <section>
           <h5>Options</h5>
           <ul>
-            <li class="clearfix">
+            <li>
               <label for="suppress-notifications">Suppress notifications upon beaming</label>
               <em class="option"><input id="suppress-notifications" type="checkbox"/></em>
             </li>
-            <li class="clearfix">
+            <li>
               <label for="show-badge">Show badge with total devices' number</label>
               <em class="option"><input id="show-badge" type="checkbox"/></em>
+            </li>
+            <li>
+              <label for="close-tab">Close local tab after beaming</label>
+              <em class="option"><input id="close-tab" type="checkbox"/></em>
             </li>
           </ul>
         </section>
@@ -39,7 +43,7 @@
         <section>
           <h5>Keyboard Shortcuts</h5>
           <ul>
-            <li class="clearfix">
+            <li>
               <span>Beam tab</span>
               <em class="key" id="beamtab-key">&hellip;</em>
             </li>
