--- a/html/options.html
+++ b/html/options.html
@@ -44,7 +44,7 @@
           <h5>Keyboard Shortcuts</h5>
           <ul>
             <li>
-              <span>Beam tab</span>
+              <span>Beam current tab</span>
               <em class="key" id="beamtab-key">&hellip;</em>
             </li>
           </ul>
