--- a/html/options.html
+++ b/html/options.html
@@ -23,6 +23,13 @@
         </section>
 
         <section>
+          <h5>Friends<em><a id="friend-link">Share link</a></em></h5>
+          <ul id="friends">
+            <li>No friends yet</li>
+          </ul>
+        </section>
+
+        <section>
           <h5>Options</h5>
           <ul>
             <li>
@@ -51,6 +58,26 @@
         </section>
 
     </article>
+
+    <section id="overlay">
+
+      <div>
+
+        <h2 id="overlay-header"></h2>
+
+        <article id="overlay-body"></article>
+
+        <section class="buttons">
+        
+          <a id="overlay-action">Sure</a>
+
+          <a id="overlay-close">Close</a>
+
+        </section>
+
+      </div>
+
+    </section>
 
     <script src="../js/options.js"></script>
 
