Added an extra page to see a history of already received tabs from friends

--- a/html/options.html
+++ b/html/options.html
@@ -41,7 +41,7 @@
               <em class="option"><input id="show-badge" type="checkbox"/></em>
             </li>
             <li>
-              <label for="close-tab">Close local tab after beaming</label>
+              <label for="close-tab">Close local tab after beaming to other devices</label>
               <em class="option"><input id="close-tab" type="checkbox"/></em>
             </li>
           </ul>
